# manual-testing

./: .env.example  .gitignore  README.md  pyproject.toml
manual-list/: question_1.md  question_10.md  question_11.md  question_12.md  question_13.md  question_14.md  question_15.md  question_16.md  question_2.md  question_3.md  question_4.md  question_5.md  question_6.md  question_7.md  question_8.md  question_9.md
src/manual_testing/: __init__.py  __main__.py  browser_capture.py  cli.py  config.py  form_purpose_analyzer.py  json_utils.py  models.py  prompt_builder.py  publisher.py  question_loader.py  question_prompts.py  runner.py  s3_upload.py  telemetry.py
src/manual_testing/llm/: __init__.py  base.py  codex_adapter.py  factory.py  gemini_adapter.py  http_utils.py  instances_api_adapter.py  llama_adapter.py  ollama_adapter.py  openai_compatible.py  opencode_adapter.py
src/manual_testing_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
